# sample_tauri

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  vite.config.ts
.cargo/: config.toml
src/: App.tsx  providers.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: commands.rs  db.rs  lib.rs  main.rs
src/features/dashboard/: Dashboard.tsx  dashboard.query.ts  dashboard.store.ts
src/features/dashboard/components/: CalculationControls.tsx  ChartPanel.tsx  PierSelector.tsx  SummaryTable.tsx
src/features/greet/: greet.query.ts  greet.store.ts
src/types/: index.ts
src/types/bindings/: Force.ts  LoadFactors.ts  Section.ts  StressParams.ts  StressResult.ts
