[package]
name = "sample_tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "sample_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "^2", features = [] }

[dependencies]
tauri = { version = "^2", features = [] }
tauri-plugin-opener = "^2"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
tauri-plugin-dialog = "2"
thiserror = "2.0.18"
anyhow = "1.0.100"
validator = "0.20.0"
typst = "0.14.2"
typst-pdf = "0.14.2"
rust_xlsxwriter = "0.93.0"
chrono = "0.4.43"
polars = "0.52.0"
ts-rs = "12.0.1"

